--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: himkt/check-edited@main
+      - uses: himkt/check-edited@depth
         with:
           target-file: NEWS
