--- a/action.yml
+++ b/action.yml
@@ -61,9 +61,16 @@ runs:
         echo "================================================"
         echo
 
+        git show $source_refs
+        git show $target_refs
+
+        echo "diff[all]"
+        git diff --exit-code "$target_refs..$source_refs"
         echo "$TARGET_FILE" | tr ',' '\n' | while read -r file; do
           file=$(printf '%q' "$file")
           git_diff_ret_code=0
+          echo "diff"
+          git diff --exit-code "$target_refs..$source_refs" -- "$file"
           git diff --exit-code "$target_refs..$source_refs" -- "$file" || git_diff_ret_code=$?
           if [ $git_diff_ret_code != 1 ]; then
             echo "$file is not updated."
